[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlabonset"
version = "0.1.0"
authors = [
    { name="Maynor Ballina", email="mballina@ictp.it" }
]
description = "Pulse simulation, onset detection and statistical analysis toolkit."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "joblib",
    "scikit-learn"
]